# devlog-ai

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
ai-engine/: .dockerignore  Dockerfile  README.md  pyproject.toml
ai-engine/app/: main.py
ai-engine/app/api/: __init__.py  ai_tasks.py  deliverables.py
ai-engine/app/clients/: __init__.py  core_callback_client.py
ai-engine/app/core/: config.py  dependencies.py  logging.py
ai-engine/app/models/: __init__.py  ai_task.py  intent.py  proposal.py
ai-engine/app/prompts/: __init__.py  deliverable.py  insight.py
ai-engine/app/providers/: __init__.py  base.py  mock.py  openai.py
ai-engine/app/schemas/: __init__.py  ai_task.py  ai_task_result.py  deliverable.py  insight.py
ai-engine/app/services/: __init__.py  ai_task_service.py  deliverable_generation_service.py  insight_generation_service.py  task_processing_service.py
ai-engine/app/workers/: __init__.py
ai-engine/devlog_ai_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ai-engine/tests/: intent_fixtures.py  test_ai_task_service.py  test_ai_tasks.py  test_core_callback_client.py  test_deliverable_generation.py  test_health.py  test_insight_generation_service.py  test_llm_providers.py  test_logging.py  test_prompt_builder.py
backend/: Dockerfile  pom.xml
docs/: architecture.md  controller.md  data-model.md  intelligence.md  knowledge-model.md  logging-policy.md  outputs.md  pipeline.md  roadmap.md  ui-ux.md  vision.md
docs/decisions/: ADR-001.md  ADR-002.md  ADR-003.md  ADR-004.md  ADR-005.md  (+34 more)
frontend/: README.md  angular.json
(+498 files in other folders)
